# game_of_conway

./: .env.example  .gitignore  Cargo.toml  README.md  code_flow.md  docker-compose.yml  postman_collection.json  user_manual.md
.knowledge/: 00-index.md  01-system-overview.md  02-repository-map.md  03-runtime-and-entrypoints.md  04-authentication-flow.md  05-admin-auth-and-rbac.md  06-routes-controllers-and-api.md  07-services-business-logic.md  08-database-models-and-storage.md  09-config-env-and-secrets.md  10-dependency-map.md  11-change-impact-guide.md  12-critical-files.md  13-testing-guide.md  14-common-live-call-questions.md  15-glossary.md
migrations/: 001_create_users.sql  002_create_grid_requests.sql  003_add_user_role.sql  004_index_input_grid.sql
src/: config.rs  error.rs  lib.rs  main.rs  models.rs
src/auth/: mod.rs
src/domain/: grid.rs
src/handlers/: auth.rs  events.rs  game.rs  history.rs  mod.rs
src/repositories/: grid_repo.rs  mod.rs  user_repo.rs
src/services/: auth_service.rs  game_service.rs  history_service.rs  mod.rs
tests/: events.rs  game_next.rs  history.rs  rbac.rs  register_login.rs
tests/common/: mod.rs
